Update info in cliniclal History. Added references

--- a/app/src/main/res/layout/activity_upload_history.xml
+++ b/app/src/main/res/layout/activity_upload_history.xml
@@ -221,13 +221,14 @@
             <EditText
                 android:id="@+id/sintH"
                 android:layout_width="match_parent"
-                android:layout_height="58dp"
-                android:layout_marginStart="0dp"
+                android:layout_height="wrap_content"
 
+                android:layout_marginStart="0dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/shapewhite"
                 android:hint="Síntomas"
-                android:maxHeight="120dp"
+                android:maxHeight="180dp"
+                android:minHeight="58dp"
                 android:paddingStart="14dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="20dp"
@@ -251,13 +252,14 @@
             <EditText
                 android:id="@+id/obsH"
                 android:layout_width="match_parent"
-                android:layout_height="58dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="0dp"
 
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/shapewhite"
                 android:hint="Observaciones médico"
-                android:maxHeight="120dp"
+                android:maxHeight="180dp"
+                android:minHeight="58dp"
                 android:paddingStart="14dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="20dp"
@@ -281,13 +283,14 @@
             <EditText
                 android:id="@+id/presH"
                 android:layout_width="match_parent"
-                android:layout_height="58dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="0dp"
 
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/shapewhite"
                 android:hint="Prescripción"
-                android:maxHeight="120dp"
+                android:maxHeight="180dp"
+                android:minHeight="58dp"
                 android:paddingStart="14dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="20dp"
