--- a/app/src/main/res/layout/activity_access.xml
+++ b/app/src/main/res/layout/activity_access.xml
@@ -10,13 +10,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/NORMAL"
+        android:background="#4D9ED3"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/NORMAL"
             android:orientation="horizontal">
 
             <ImageButton
@@ -27,7 +26,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
-                android:background="@color/NORMAL"
+                android:background="@color/NORMALDark"
                 android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +39,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
-                android:background="@color/NORMAL"
+                android:background="@color/NORMALDark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btnSignout"
                 app:srcCompat="@android:drawable/ic_menu_edit" />
@@ -52,7 +51,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
-                android:background="@color/NORMAL"
+                android:background="@color/NORMALDark"
                 android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +64,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
-                android:background="@color/NORMAL"
+                android:background="@color/NORMALDark"
                 android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +77,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
-                android:background="@color/NORMAL"
+                android:background="@color/NORMALDark"
                 android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -106,7 +105,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#E1E1E1">
+        android:background="#EDEDED">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -129,7 +128,7 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="0dp"
                     android:text="Nombre"
-                    android:textColor="#4A4A4A"
+                    android:textColor="#5C5C5C"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
@@ -139,7 +138,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="8dp"
                     android:text="Loading..."
-                    android:textColor="#000000" />
+                    android:textColor="#373737" />
 
             </LinearLayout>
 
@@ -158,7 +157,7 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="0dp"
                     android:text="Cédula Ciudadana"
-                    android:textColor="#4A4A4A"
+                    android:textColor="#5C5C5C"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
@@ -168,7 +167,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="8dp"
                     android:text="Loading..."
-                    android:textColor="#000000" />
+                    android:textColor="#373737" />
 
             </LinearLayout>
 
@@ -187,7 +186,7 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="0dp"
                     android:text="Correo Electrónico"
-                    android:textColor="#4A4A4A"
+                    android:textColor="#5C5C5C"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
@@ -197,7 +196,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="8dp"
                     android:text="Loading..."
-                    android:textColor="#000000" />
+                    android:textColor="#373737" />
 
             </LinearLayout>
 
@@ -217,7 +216,7 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="0dp"
                     android:text="Residencia"
-                    android:textColor="#4A4A4A"
+                    android:textColor="#5C5C5C"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
@@ -227,7 +226,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="8dp"
                     android:text="Loading..."
-                    android:textColor="#000000" />
+                    android:textColor="#373737" />
 
             </LinearLayout>
 
@@ -246,7 +245,7 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="0dp"
                     android:text="Ocupación"
-                    android:textColor="#4A4A4A"
+                    android:textColor="#5C5C5C"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
@@ -256,7 +255,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="8dp"
                     android:text="Loading..."
-                    android:textColor="#000000" />
+                    android:textColor="#373737" />
 
             </LinearLayout>
 
@@ -275,7 +274,7 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="0dp"
                     android:text="Grupo Sanguineo"
-                    android:textColor="#4A4A4A"
+                    android:textColor="#5C5C5C"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
@@ -285,7 +284,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="8dp"
                     android:text="Loading..."
-                    android:textColor="#000000" />
+                    android:textColor="#373737" />
 
             </LinearLayout>
 
@@ -304,7 +303,7 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="0dp"
                     android:text="Género"
-                    android:textColor="#4A4A4A"
+                    android:textColor="#5C5C5C"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
@@ -314,7 +313,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="8dp"
                     android:text="Loading..."
-                    android:textColor="#000000" />
+                    android:textColor="#373737" />
 
             </LinearLayout>
 
@@ -333,7 +332,7 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="0dp"
                     android:text="Problemas Cardiacos"
-                    android:textColor="#4A4A4A"
+                    android:textColor="#5C5C5C"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
@@ -343,7 +342,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="8dp"
                     android:text="Loading..."
-                    android:textColor="#000000" />
+                    android:textColor="#373737" />
 
             </LinearLayout>
 
@@ -362,7 +361,7 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="0dp"
                     android:text="Historial de cáncer"
-                    android:textColor="#4A4A4A"
+                    android:textColor="#5C5C5C"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
@@ -372,7 +371,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="8dp"
                     android:text="Loading..."
-                    android:textColor="#000000" />
+                    android:textColor="#373737" />
 
             </LinearLayout>
 
@@ -391,7 +390,7 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="0dp"
                     android:text="Cirugías"
-                    android:textColor="#4A4A4A"
+                    android:textColor="#5C5C5C"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
@@ -401,7 +400,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="8dp"
                     android:text="Loading..."
-                    android:textColor="#000000" />
+                    android:textColor="#373737" />
 
             </LinearLayout>
 
@@ -420,7 +419,7 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="0dp"
                     android:text="Alergias"
-                    android:textColor="#4A4A4A"
+                    android:textColor="#5C5C5C"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
@@ -430,7 +429,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="8dp"
                     android:text="Loading..."
-                    android:textColor="#000000" />
+                    android:textColor="#373737" />
 
             </LinearLayout>
 
@@ -449,7 +448,7 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="0dp"
                     android:text="ETS"
-                    android:textColor="#4A4A4A"
+                    android:textColor="#5C5C5C"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
@@ -459,7 +458,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="8dp"
                     android:text="Loading..."
-                    android:textColor="#000000" />
+                    android:textColor="#373737" />
 
             </LinearLayout>
 
@@ -479,7 +478,7 @@
                     android:layout_height="wrap_content"
                     android:paddingEnd="0dp"
                     android:text="Contacto de Emergencia"
-                    android:textColor="#4A4A4A"
+                    android:textColor="#5C5C5C"
                     android:textSize="15sp"
                     android:textStyle="bold" />
 
@@ -489,7 +488,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="8dp"
                     android:text="Loading..."
-                    android:textColor="#000000" />
+                    android:textColor="#373737" />
 
             </LinearLayout>
         </LinearLayout>
