--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="NORMAL">#609FC8</color>
+    <color name="NORMAL">#ff0099cc</color>
     <color name="NORMALDark">#4D9ED3</color>
     <color name="NORMALButton">#5186A8</color>
     <color name="colorPrimary">#6200EE</color>
