--- a/app/src/main/res/drawable/blueshape.xml
+++ b/app/src/main/res/drawable/blueshape.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-<solid android:color="#609FC8"/>
+<solid android:color="@color/NORMAL"/>
 <padding android:left="1dp" android:top="1dp" android:right="1dp" android:bottom="1dp"/>
 <corners android:radius="30px"/>
 </shape>
