--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,47 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#609FC8"
+    android:background="@color/NORMAL"
     tools:context=".RegisterActivity">
 
 
-        <EditText
-            android:id="@+id/textPhone"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="32dp"
-            android:background="@drawable/shape"
-            android:ems="10"
-            android:hint="Número celular"
-            android:inputType="phone"
-            android:padding="6dp"
-            android:paddingStart="20dp"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@+id/textEmail"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent" />
+    <EditText
+        android:id="@+id/textPhone"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/shape"
+        android:ems="10"
+        android:hint="Número celular"
+        android:inputType="phone"
+        android:padding="6dp"
+        android:paddingStart="20dp"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/textEmail"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <EditText
-            android:id="@+id/textCC"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="24dp"
-            android:background="@drawable/shape"
-            android:ems="10"
-            android:hint="Cécula Ciudadana"
-            android:inputType="number"
-            android:padding="6dp"
-            android:paddingStart="20dp"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@+id/textPhone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
+    <EditText
+        android:id="@+id/textCC"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/shape"
+        android:ems="10"
+        android:hint="Cécula Ciudadana"
+        android:inputType="number"
+        android:padding="6dp"
+        android:paddingStart="20dp"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/textPhone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/textCcA"
@@ -79,74 +79,74 @@
         app:layout_constraintTop_toBottomOf="@+id/notifRegist"
         app:layout_constraintVertical_bias="0.0" />
 
-        <EditText
-            android:id="@+id/textEmail"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="24dp"
-            android:background="@drawable/shape"
-            android:ems="10"
-            android:hint="@string/textEmail"
-            android:inputType="textEmailAddress"
-            android:padding="6dp"
-            android:paddingStart="20dp"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@+id/textPassword"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
+    <EditText
+        android:id="@+id/textEmail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/shape"
+        android:ems="10"
+        android:hint="@string/textEmail"
+        android:inputType="textEmailAddress"
+        android:padding="6dp"
+        android:paddingStart="20dp"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
-        <EditText
-            android:id="@+id/textPassword"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="32dp"
-            android:background="@drawable/shape"
-            android:ems="10"
-            android:hint="@string/textPass"
-            android:inputType="textPassword"
-            android:padding="6dp"
-            android:paddingStart="20dp"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.423" />
+    <EditText
+        android:id="@+id/textPassword"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/shape"
+        android:ems="10"
+        android:hint="@string/textPass"
+        android:inputType="textPassword"
+        android:padding="6dp"
+        android:paddingStart="20dp"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.423" />
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="80dp"
-            android:fontFamily="monospace"
-            android:text="Health History"
-            android:textColor="@color/common_google_signin_btn_text_dark_default"
-            android:textSize="30dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@+id/email"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="80dp"
+        android:fontFamily="monospace"
+        android:text="Health History"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textSize="30dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/notifRegist"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:paddingStart="50dp"
-            android:paddingEnd="50dp"
-            android:textAlignment="center"
-            android:textColor="@android:color/background_light"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textPassword" />
+    <TextView
+        android:id="@+id/notifRegist"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:paddingStart="50dp"
+        android:paddingEnd="50dp"
+        android:textAlignment="center"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textPassword" />
 
     <TextView
         android:id="@+id/textView7"
@@ -159,36 +159,36 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cédula Ciudadna:"
-            app:layout_constraintBottom_toTopOf="@+id/textCC"
-            app:layout_constraintStart_toStartOf="@+id/textCC" />
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cédula Ciudadna:"
+        app:layout_constraintBottom_toTopOf="@+id/textCC"
+        app:layout_constraintStart_toStartOf="@+id/textCC" />
 
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Número celular:"
-            app:layout_constraintBottom_toTopOf="@+id/textPhone"
-            app:layout_constraintStart_toStartOf="@+id/textPhone" />
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Número celular:"
+        app:layout_constraintBottom_toTopOf="@+id/textPhone"
+        app:layout_constraintStart_toStartOf="@+id/textPhone" />
 
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Correo electrónico:"
-            app:layout_constraintBottom_toTopOf="@+id/textEmail"
-            app:layout_constraintStart_toStartOf="@+id/textEmail" />
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Correo electrónico:"
+        app:layout_constraintBottom_toTopOf="@+id/textEmail"
+        app:layout_constraintStart_toStartOf="@+id/textEmail" />
 
-        <TextView
-            android:id="@+id/textView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Contraseña:"
-            app:layout_constraintBottom_toTopOf="@+id/textPassword"
-            app:layout_constraintStart_toStartOf="@+id/textPassword" />
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Contraseña:"
+        app:layout_constraintBottom_toTopOf="@+id/textPassword"
+        app:layout_constraintStart_toStartOf="@+id/textPassword" />
 
     <TextView
         android:id="@+id/textView13"
@@ -204,17 +204,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
-        <TextView
-            android:id="@+id/textAccount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:clickable="true"
-            android:text="Ya tengo cuenta"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
+    <TextView
+        android:id="@+id/textAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:clickable="true"
+        android:text="Ya tengo cuenta"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
+
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
