--- a/app/src/main/res/layout/add_invent.xml
+++ b/app/src/main/res/layout/add_invent.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical"
+    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
     tools:context=".MainActivity">
 
     <ScrollView
@@ -65,6 +66,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:paddingTop="24dp"
+            android:paddingBottom="14dp"
             android:text="Visualizar inventario"
             android:textColor="@android:color/holo_blue_dark"
             android:textSize="18sp"
@@ -73,57 +75,57 @@
     </LinearLayout>
 
 
-        <LinearLayout
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView24"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Nombre Gen."
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textView26"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Precio Uni."
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/uni"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Total Uni."
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:textColor="#373737">
 
-            <TableLayout
-                android:id="@+id/tb1"
+
+                <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="30dp"
-                android:stretchColumns="*"
-                android:textColor="#373737">
-
-                <TableRow
-                    android:id="@+id/tbrow1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="#373737">
-
-                    <TextView
-                        android:id="@+id/t1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Nombre del producto"
-                        android:textColor="#373737"
-                        android:textSize="15sp" />
-
-                    <TextView
-                        android:id="@+id/t2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Precio"
-                        android:textColor="#373737"
-                        android:textSize="15sp" />
-
-                    <TextView
-                        android:id="@+id/t3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Cantidad"
-                        android:textColor="#373737"
-                        android:textSize="15sp" />
-
-
-                </TableRow>
-
-
-            </TableLayout>
-
-
+                android:padding="14dp" />
         </LinearLayout>
         </LinearLayout>
     </ScrollView>
