--- a/app/src/main/res/layout/activity_main_hisory.xml
+++ b/app/src/main/res/layout/activity_main_hisory.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E8E8E8"
+    android:background="#F0F0F0"
     tools:context=".MainHisory">
 
 
@@ -123,6 +123,7 @@
                 android:text="Loading..."
                 android:textColor="#202020" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -146,6 +147,7 @@
                 android:text="Loading..."
                 android:textColor="#202020" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -169,6 +171,7 @@
                 android:text="Loading..."
                 android:textColor="#202020" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -192,6 +195,7 @@
                 android:text="Loading..."
                 android:textColor="#202020" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
