--- a/app/src/main/res/layout/add_invent.xml
+++ b/app/src/main/res/layout/add_invent.xml
@@ -85,8 +85,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:paddingStart="4dp"
                     android:text="Nombre Gen."
-                    android:textAlignment="center"
+                    android:textAlignment="textStart"
                     android:textColor="#000000"
                     android:textSize="15sp"
                     android:textStyle="bold" />
@@ -97,7 +98,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Precio Uni."
-                    android:textAlignment="center"
+                    android:textAlignment="textStart"
                     android:textColor="#000000"
                     android:textSize="15sp"
                     android:textStyle="bold" />
@@ -108,7 +109,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Total Uni."
-                    android:textAlignment="center"
+                    android:textAlignment="textStart"
                     android:textColor="#000000"
                     android:textSize="15sp"
                     android:textStyle="bold" />
@@ -122,10 +123,10 @@
 
 
                 <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerId"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="14dp" />
+                    android:id="@+id/recyclerId"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp" />
         </LinearLayout>
         </LinearLayout>
     </ScrollView>
