--- a/app/src/main/res/layout/inventory.xml
+++ b/app/src/main/res/layout/inventory.xml
@@ -107,7 +107,7 @@
                 android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:paddingStart="14dp"
-                android:text="Unidades x empaque"
+                android:text="Unidades x empaque:"
                 android:textColor="#3E3E3E" />
 
             <EditText
@@ -134,7 +134,7 @@
                     android:layout_width="160dp"
                     android:layout_height="wrap_content"
                     android:paddingStart="14dp"
-                    android:text="Concentración (mg)"
+                    android:text="Concentración (mg):"
                     android:textColor="#3E3E3E" />
 
                 <EditText
@@ -160,7 +160,7 @@
                     android:layout_width="160dp"
                     android:layout_height="wrap_content"
                     android:paddingStart="14dp"
-                    android:text="Unidades totales"
+                    android:text="Unidades totales:"
                     android:textColor="#3E3E3E" />
 
                 <EditText
@@ -186,6 +186,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="24dp"
+                    android:layout_marginBottom="24dp"
                     android:background="@drawable/blueshape"
                     android:paddingStart="40dp"
                     android:paddingEnd="40dp"
