--- a/app/src/main/res/layout/add_invent.xml
+++ b/app/src/main/res/layout/add_invent.xml
@@ -126,6 +126,7 @@
                     android:id="@+id/recyclerId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="24dp"
                     android:padding="5dp" />
         </LinearLayout>
         </LinearLayout>
