--- a/app/src/main/res/layout/add_invent.xml
+++ b/app/src/main/res/layout/add_invent.xml
@@ -116,19 +116,19 @@
             </LinearLayout>
 
             <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:textColor="#373737">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingBottom="24dp"
+                android:textColor="#373737">
 
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="24dp"
                     android:padding="5dp" />
-        </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
