Some bugs were repared

--- a/app/src/main/res/layout/add_invent.xml
+++ b/app/src/main/res/layout/add_invent.xml
@@ -26,35 +26,35 @@
                 android:layout_marginTop="30dp"
                 android:background="@drawable/invetario" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:gravity="center"
-        android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/ba"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/blueshape"
-            android:paddingStart="24dp"
-            android:paddingEnd="24dp"
-            android:text="Agregar"
-            android:textColor="@android:color/white" />
+                <Button
+                    android:id="@+id/ba"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/blueshape"
+                    android:paddingStart="24dp"
+                    android:paddingEnd="24dp"
+                    android:text="Agregar"
+                    android:textColor="@android:color/white" />
 
-        <Button
-            android:id="@+id/be"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/blueshape"
-            android:paddingStart="24dp"
-            android:paddingEnd="24dp"
-            android:text="Eliminar"
-            android:textColor="@android:color/white" />
-    </LinearLayout>
+                <Button
+                    android:id="@+id/be"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/blueshape"
+                    android:paddingStart="24dp"
+                    android:paddingEnd="24dp"
+                    android:text="Eliminar"
+                    android:textColor="@android:color/white" />
+            </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -65,7 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:paddingTop="24dp"
+            android:paddingTop="18dp"
             android:paddingBottom="14dp"
             android:text="Visualizar inventario"
             android:textColor="@android:color/holo_blue_dark"
@@ -85,7 +85,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:paddingStart="4dp"
+                    android:paddingStart="10dp"
                     android:text="Nombre Gen."
                     android:textAlignment="textStart"
                     android:textColor="#000000"
@@ -117,9 +117,9 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:paddingBottom="24dp"
+                android:paddingBottom="20dp"
                 android:textColor="#373737">
 
 
@@ -127,7 +127,8 @@
                     android:id="@+id/recyclerId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="5dp" />
+                    android:padding="5dp"
+                    android:paddingStart="10dp" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
