Some bugs were repared

--- a/app/src/main/res/layout/activity_access.xml
+++ b/app/src/main/res/layout/activity_access.xml
@@ -22,9 +22,9 @@
                 android:id="@+id/btnSignout"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="24dp"
+                android:layout_marginStart="18dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="12dp"
                 android:layout_marginBottom="8dp"
                 android:background="@color/NORMAL"
                 android:textAlignment="center"
@@ -37,7 +37,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="12dp"
                 android:layout_marginBottom="8dp"
                 android:background="@color/NORMAL"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -49,7 +49,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="12dp"
                 android:layout_marginBottom="8dp"
                 android:background="@color/NORMAL"
                 android:textAlignment="center"
@@ -62,7 +62,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="12dp"
                 android:layout_marginBottom="8dp"
                 android:background="@color/NORMAL"
                 android:textAlignment="center"
@@ -75,7 +75,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="12dp"
                 android:layout_marginBottom="8dp"
                 android:background="@color/NORMAL"
                 android:textAlignment="center"
@@ -88,7 +88,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="12dp"
                 android:layout_marginBottom="8dp"
                 android:background="@color/NORMAL"
                 android:hapticFeedbackEnabled="true"
@@ -96,6 +96,20 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:srcCompat="@android:drawable/ic_menu_add" />
+
+            <ImageButton
+                android:id="@+id/pdf"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="8dp"
+                android:background="@color/NORMAL"
+                android:hapticFeedbackEnabled="true"
+                android:textAlignment="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@android:drawable/ic_menu_info_details" />
 
         </LinearLayout>
 
