--- a/app/src/main/res/layout/activity_update_info.xml
+++ b/app/src/main/res/layout/activity_update_info.xml
@@ -6,13 +6,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".UpdateInfoActivity">
+
     <TextView
         android:id="@+id/notifCamps"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:text=""
         android:textAlignment="textEnd"
-        android:textColor="?android:attr/colorLongPressedHighlight"
+        android:textColor="#F44336"
         android:textSize="15dp" />
     <ScrollView
         android:layout_width="match_parent"
@@ -85,7 +88,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/shape"
                 android:ems="10"
-                android:hint="Fecha de nacimiento (30/04/2000)"
+                android:hint="Fecha de nacimiento (12/31/2000)"
                 android:inputType="date"
                 android:padding="8dp"
                 android:paddingStart="20dp"
@@ -156,12 +159,26 @@
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/shape"
                 android:ems="10"
-                android:hint="Grupo sanguineo"
+                android:hint="Grupo sanguineo (A+, O-, AB+, etc)"
                 android:inputType="text"
                 android:padding="8dp"
                 android:paddingStart="20dp"
                 android:textSize="16dp" />
 
+
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="0dp"
+                android:background="@drawable/shape"
+                android:ems="10"
+                android:hint="Grupo sanguineo"
+                android:inputType="text"
+                android:padding="8dp"
+                android:paddingStart="20dp"
+                android:textSize="16dp" />
 
             <TextView
                 android:id="@+id/cardiac"
