--- a/app/src/main/res/layout/delete.xml
+++ b/app/src/main/res/layout/delete.xml
@@ -47,10 +47,12 @@
             <Spinner
                 android:id="@+id/spinnerProduct"
                 android:layout_width="309dp"
-                android:layout_height="54dp"
+                android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="14dp"
                 android:background="@drawable/darkblueshape"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -60,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="34dp"
+                android:layout_marginTop="25dp"
                 android:text="Seleccione la cantidad a eliminar"
                 android:textColor="@android:color/holo_blue_dark"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -68,13 +70,16 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/spinnerProduct" />
 
-            <Spinner
+            <EditText
                 android:id="@+id/spinnerQuantity"
                 android:layout_width="309dp"
-                android:layout_height="54dp"
+                android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="14dp"
                 android:background="@drawable/darkblueshape"
+                android:inputType="number"
+                android:paddingStart="18dp"
+                android:paddingEnd="12dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -84,7 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="30dp"
                 android:background="@drawable/blueshape"
                 android:paddingStart="24dp"
                 android:paddingEnd="24dp"
