--- a/app/src/main/res/layout/doctors_activity_main.xml
+++ b/app/src/main/res/layout/doctors_activity_main.xml
@@ -23,7 +23,7 @@
         android:id="@+id/spinnerMedico"
         android:layout_width="261dp"
         android:layout_height="48dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="110dp"
         android:background="@drawable/darkblueshape"
         android:paddingStart="24dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,7 +60,7 @@
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="82dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,7 @@
         android:id="@+id/textExplanation"
         android:layout_width="246dp"
         android:layout_height="62dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="8dp"
         android:gravity="center"
         android:text="Seleccione su médico y hora que desea para su cita médica"
         android:textColor="@android:color/holo_blue_dark"
@@ -79,14 +79,13 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/spinnerMedico"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <Button
         android:id="@+id/buttonCancel"
         android:layout_width="250dp"
-        android:layout_height="55dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@drawable/grayshape"
         android:drawable="@drawable/grayshape"
